--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Weather Report</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Weather Report App</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Weather Report</h1>
+    <h1>🌤️ Weather Report App</h1>
+
     <form id="weatherForm">
-      <input type="text" id="cityInput" placeholder="Enter city name" required />
+      <input type="text" id="cityInput" placeholder="Enter City or Upazila" required />
       <select id="modeSelect">
-        <option value="live">Live Weather</option>
+        <option value="live">Live</option>
         <option value="past">Past 7 Days</option>
         <option value="future">Next 7 Days</option>
       </select>
       <button type="submit">Get Weather</button>
     </form>
 
-    <div id="weatherResult"></div>
+    <button id="liveLocationBtn">📍 Use My Location</button>
+    <button id="clearHistoryBtn">🗑️ Clear History</button>
 
-    <div class="history-section">
-      <h2>Search History</h2>
-      <ul id="historyList"></ul>
-      <button id="clearHistoryBtn">Clear All History</button>
-    </div>
+    <ul id="historyList"></ul>
+
+    <div id="weatherResult"></div>
   </div>
 
   <script src="script.js"></script>
