--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Weather Report App</title>
+  <title>Weather App</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🌤️ Weather Report App</h1>
-
+    <h1>🌦 Weather App</h1>
     <form id="weatherForm">
       <input type="text" id="cityInput" placeholder="Enter City or Upazila" required />
       <select id="modeSelect">
@@ -17,15 +16,13 @@
         <option value="past">Past 7 Days</option>
         <option value="future">Next 7 Days</option>
       </select>
-      <button type="submit">Get Weather</button>
+      <button type="submit">Search</button>
     </form>
-
-    <button id="liveLocationBtn">📍 Use My Location</button>
-    <button id="clearHistoryBtn">🗑️ Clear History</button>
-
-    <ul id="historyList"></ul>
-
+    <button id="myLocationBtn">📍 My Location</button>
     <div id="weatherResult"></div>
+    <h3>Search History</h3>
+    <ul id="historyList"></ul>
+    <button id="clearHistoryBtn">🗑 Clear History</button>
   </div>
 
   <script src="script.js"></script>
