--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button type="submit">Search</button>
     </form>
     <button id="myLocationBtn">📍 My Location</button>
-    <datalist id="suggestions"></datalist>
+    <ul id="suggestions" class="custom-suggestions"></ul>
     <div id="weatherResult"></div>
     <h3>Search History</h3>
     <ul id="historyList"></ul>
