--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
       <button type="submit">Search</button>
     </form>
     <button id="myLocationBtn">📍 My Location</button>
-    <ul id="suggestions" class="custom-suggestions"></ul>
+    <datalist id="suggestions"></datalist>
     <div id="weatherResult"></div>
     <h3>Search History</h3>
     <ul id="historyList"></ul>
     <button id="clearHistoryBtn">🗑 Clear History</button>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
