--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Weather App</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="container">
-    <h1>🌦 Weather App</h1>
-    <form id="weatherForm">
-      <input type="text" id="cityInput" placeholder="Enter City or Upazila" required list="suggestions" />
-      <select id="modeSelect">
-        <option value="live">Live</option>
-        <option value="past">Past 7 Days</option>
-        <option value="future">Next 7 Days</option>
-      </select>
-      <button type="submit">Search</button>
-    </form>
-    <button id="myLocationBtn">📍 My Location</button>
-    <datalist id="suggestions"></datalist>
-    <div id="weatherResult"></div>
-    <h3>Search History</h3>
-    <ul id="historyList"></ul>
-    <button id="clearHistoryBtn">🗑 Clear History</button>
-  </div>
-  <script src="script.js"></script>
-</body>
-</html>
+Give me everything from start and dont mistake..i told earlier that
