--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>🌦 Weather App</h1>
+    <h1>Weather Forecast</h1>
     <form id="weatherForm">
-      <input type="text" id="cityInput" placeholder="Enter City or Upazila" required list="suggestions" />
+      <input type="text" id="cityInput" placeholder="Enter city name..." />
       <select id="modeSelect">
         <option value="live">Live</option>
         <option value="past">Past 7 Days</option>
@@ -18,12 +18,14 @@
       </select>
       <button type="submit">Search</button>
     </form>
-    <button id="myLocationBtn">📍 My Location</button>
-    <datalist id="suggestions"></datalist>
+    <button id="myLocationBtn">Get My Location</button>
+     <button  type="button" id="unitToggle">Switch to °F</button>
+
     <div id="weatherResult"></div>
+
     <h3>Search History</h3>
     <ul id="historyList"></ul>
-    <button id="clearHistoryBtn">🗑 Clear History</button>
+    <button id="clearHistoryBtn">Clear History</button>
   </div>
 
   <script src="script.js"></script>
