--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Weather Forecast</h1>
+    <h1>🌦 Weather Forecast</h1>
     <form id="weatherForm">
       <input type="text" id="cityInput" placeholder="Enter city name..." />
       <select id="modeSelect">
@@ -18,7 +18,7 @@
       </select>
       <button type="submit">Search</button>
     </form>
-    <button id="myLocationBtn">Get My Location</button>
+    <button id="myLocationBtn">📍Get My Location</button>
      <button  type="button" id="unitToggle">Switch to °F</button>
 
     <div id="weatherResult"></div>
