--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,15 +10,17 @@
 <body>
   <div class="container">
     <h1>🌦 Weather Forecast</h1>
-    <form id="weatherForm">
-      <input type="text" id="cityInput" placeholder="Enter city name..." />
-      <select id="modeSelect">
-        <option value="live">Live</option>
-        <option value="past">Past 7 Days</option>
-        <option value="future">Next 7 Days</option>
-      </select>
-      <button type="submit">Search</button>
-    </form>
+   <form id="weatherForm">
+  <div class="form-row">
+    <select id="modeSelect">
+      <option value="live">Live</option>
+      <option value="past">Past 7 Days</option>
+      <option value="future">Next 7 Days</option>
+    </select>
+    <input type="text" id="cityInput" placeholder="Enter city name..." />
+  </div>
+  <button type="submit">Search</button>
+</form>
     <button id="myLocationBtn">📍Get My Location</button>
      <button  type="button" id="unitToggle">Switch to °F</button>
 
