--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,22 +9,26 @@
 <body>
   <div class="container">
     <h1>🌦 Weather Forecast</h1>
-   <form id="weatherForm">
-  <div class="form-row">
-    <select id="modeSelect">
-      <option value="live">Live</option>
-      <option value="past">Past 7 Days</option>
-      <option value="future">Next 7 Days</option>
-    </select>
-    <input type="text" id="cityInput" placeholder="Enter city name..." />
-  </div>
-  <button type="submit">Search</button>
-</form>
-    <button id="myLocationBtn">📍Get My Location</button>
-     <button  type="button" id="unitToggle">Switch to °F</button>
 
+    <!-- Search Form -->
+    <form id="weatherForm">
+      <input type="text" id="cityInput" placeholder="Enter city name..." />
+      <select id="modeSelect">
+        <option value="live">Live</option>
+        <option value="past">Past 7 Days</option>
+        <option value="future">Next 7 Days</option>
+      </select>
+      <button type="submit">Search</button>
+    </form>
+
+    <!-- Location and Unit Toggle -->
+    <button id="myLocationBtn">📍Get My Location</button>
+    <button type="button" id="unitToggle">Switch to °F</button>
+
+    <!-- Weather Result -->
     <div id="weatherResult"></div>
 
+    <!-- Search History -->
     <h3>Search History</h3>
     <ul id="historyList"></ul>
     <button id="clearHistoryBtn">Clear History</button>
