--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <form id="weatherForm">
           <div class="row-1">
             <input type="text" id="cityInput" placeholder="Enter city name..." />
+            <div class="row2">
             <select id="modeSelect">
               <option value="live">Live</option>
               <option value="past">Past 7 Days</option>
               <option value="future">Next 7 Days</option>
             </select>
-            <button  type="submit">Search</button>
+            <button  type="submit">Search</button></div>
           </div>
         </form>
       </div>
