--- a/index.html
+++ b/index.html
@@ -5,6 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Weather App</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Inline fallback styles to ensure suggestions are visible */
+    .input-wrapper {
+      position: relative;
+      width: 100%;
+    }
+
+    #suggestions {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: white;
+      border: 1px solid #ccc;
+      z-index: 100;
+      max-height: 200px;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: row;
+      color: black;
+      border-radius: 0 0 6px 6px;
+    }
+
+    .suggestion-item {
+      display: block;
+      padding: 10px;
+      cursor: pointer;
+      border-bottom: 1px solid #eee;
+      white-space: normal;
+    }
+
+    .suggestion-item:hover {
+      background-color: #f0f0f0;
+    }
+
+    /* Optional: Make sure input wrapper doesn't overflow */
+    .row-1 {
+      display: flex;
+      width: 100%;
+      gap: 10px;
+    }
+
+    .row-1 .input-wrapper {
+      flex: 2;
+    }
+
+    .row-1 select {
+      flex: 1.2;
+    }
+
+    .row-1 button[type="submit"] {
+      flex: 1;
+    }
+
+    @media (max-width: 600px) {
+      .row-1 {
+        flex-direction: column;
+      }
+
+      .row-1 select,
+      .row-1 button {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -15,17 +80,21 @@
       <div class="form-wrapper">
         <form id="weatherForm">
           <div class="row-1">
-            <input type="text" id="cityInput" placeholder="Enter city name..." />
+            <div class="input-wrapper">
+              <input type="text" id="cityInput" placeholder="Enter city name..." autocomplete="off" />
+              <div id="suggestions"></div>
+            </div>
             <div class="row2">
             <select id="modeSelect">
               <option value="live">Live</option>
               <option value="past">Past 7 Days</option>
               <option value="future">Next 7 Days</option>
             </select>
-            <button  type="submit">Search</button></div>
+            <button type="submit">Search</button></div>
           </div>
         </form>
       </div>
+
       <div class="location-wrapper">
         <button id="myLocationBtn">📍Get My Location</button>
       </div>
